# ai-code-reviewer

./: .ai-review.example.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code-review.yml
action/: action.yml  review_pr.py
api/: main.py
cli/: main.py
demo/: app.py
examples/: sample_bad_code.py  usage_examples.py
src/ai_code_reviewer/: __init__.py  analyzer.py
src/ai_code_reviewer/models/: __init__.py  reviewer_model.py
src/ai_code_reviewer/parsers/: __init__.py  diff_parser.py
src/ai_code_reviewer/prompts/: __init__.py  templates.py
src/ai_code_reviewer/utils/: __init__.py  code_utils.py
tests/: __init__.py  test_analyzer.py  test_diff_parser.py
